src/index.css
:root{
   --color-one: #B5C99A; /* background color --- green */
   --color-two: #6f482b; /* font color --- brown */
   --color-three: #eaa534;
   --color-four:#cd581b;
}

*{
  font-family: 'Heebo';
  color:var(--color-two);

}

body {
  margin: 0;
  font-family: 'Heebo';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--color-one);
}

.App{
  display:grid;
  grid-template-columns: 1fr;
  grid-template-rows: .5fr 3fr 3fr .5fr;
}

/* ---------- HEADER ---------- */
.header{
  display:flex;
  justify-content: space-between;
  padding:1em 3em 1em 3em;
  grid-row: 1/2;
  
}

.header a {

  text-decoration: none;
  font-size:20px;
}

.header-right{
  display:flex;
  gap:1em;
}

/*---------- Intro Panel ---------- */

.intro-panel{
  display:grid;
  grid-template-columns: 2fr 1fr;
  margin:auto;
}

.intro-panel-right{
  width:30em;
}

.intro{
  font-family: 'Heebo';
  font-style: normal;
  font-weight: 700;
  font-size: 44px;
  line-height: 60px;
}


.intro-sub{
  width: 497px;
  height: 66px;
  left: 15%;
  top: 373px;

  font-family: 'Heebo';
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px; 

  font-weight: bold;

}

.intro-resume-button{
  width: 208px;
  height: 47px;
  left: 15%;
  top: 477px;
  background: #f8e3ba;

  border-radius: 10px;

  font-family: 'Heebo';
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 29px;

}

.info-panel-photo{

  width: 293px;
  height: 293px;
  left: 62%;
  top: 210px;
  border:1px solid black;
  border-radius: 100%;
}


 /* ---------- About Section ----------- */
 .about{
  margin-bottom: 5%;
 }
.about-title{
  font-size: 2.5em;
}

.about-info{
  font-size: 1.5em;
  margin: 0 15% 5% 15%;
}

.skills{
  display:grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.skill-type{
  display:flex;
  flex-direction: column;
  justify-content: center;
}

.skills h3{
  text-decoration: underline;
}

.skills p{
  margin: -.005em;
  padding: none;
}

